--- a/template/index.html
+++ b/template/index.html
@@ -1,97 +1,99 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-<head>
+  <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/karla">
     <title>Land of Gaia</title>
-</head>
+  </head>
 
-<body>
-    <div class="grid-container">
-        <header class="row">
-            <div>
-                <a href="index.html"><img class="logo" src="images/logo.jpg" /></a>
-            </div>
-            <div>
-                <a href="cart.html">Cart</a>
-                <a href="signin.html">Sign In</a>
-            </div>
-        </header>
-        <main>
-            <div class="row center">
-                <div class="card">
-                    <a href="product.html">
-                        <img class="medium" src="./images/p1.jpg" alt="product" />
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html">
-                            <h2>Boho Summer Dress</h2>
-                        </a>
-                        <div class="price">$45.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <a href="product.html">
-                        <img class="medium" src="./images/p1.jpg" alt="product" />
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html">
-                            <h2>Boho Summer Dress</h2>
-                        </a>
-                        <div class="price">$45.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <a href="product.html">
-                        <img class="medium" src="./images/p1.jpg" alt="product" />
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html">
-                            <h2>Boho Summer Dress</h2>
-                        </a>
-                        <div class="price">$45.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <a href="product.html">
-                        <img class="medium" src="./images/p1.jpg" alt="product" />
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html">
-                            <h2>Boho Summer Dress</h2>
-                        </a>
-                        <div class="price">$45.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <a href="product.html">
-                        <img class="medium" src="./images/p1.jpg" alt="product" />
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html">
-                            <h2>Boho Summer Dress</h2>
-                        </a>
-                        <div class="price">$45.00</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <a href="product.html">
-                        <img class="medium" src="./images/p1.jpg" alt="product" />
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html">
-                            <h2>Boho Summer Dress</h2>
-                        </a>
-                        <div class="price">$45.00</div>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <footer class="row center">
-            All rights reserved.
-        </footer>
-    </div>
-</body>
+  <body>
+    <header>
+      <img class="logo" src="images/logo.svg" />
+      <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+      <nav>
+        <ul>
+          <li><a href="#">Dresses</a></li>
+          <li><a href="#">Shoes</a></li>
+          <li><a href="#">Accessories</a></li>
+          <li><a href="#">Beauty & Wellness</a></li>
+          <li><a href="#">Gifts & Candles</a></li>
+          <li><a href="#">Sale</a></li>
+        </ul>
+      </nav>
+      <div class="search-cart">
+        <i class="fa fa-search"></i>
+        <i class="fas fa-shopping-bag"></i>
+        <label for="nav-toggle" class="nav-toggle-label">
+          <span></span>
+        </label>
+      </div>
+    </header>
 
+    <main>
+      <p>Content</p>
+    </main>
+
+    <footer class="footer">
+      <div class="footer-left">
+        <img src="images/logo.svg" alt="logo" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, sint
+          incidunt accusamus tenetur nihil officia aliquid illum? Ipsa
+          reiciendis nisi aspernatur fugiat laboriosam nobis quae dignissimos.
+          Saepe excepturi iusto tempore.
+        </p>
+      </div>
+      <ul class="footer-right">
+        <li>
+          <h2>Help & Info</h2>
+          <ul class="box">
+            <li><a href="#">Track Your Order</a></li>
+            <li><a href="#">Start A Return or Exchange</a></li>
+            <li><a href="#">Returns & Exchanges</a></li>
+            <li><a href="#">Shipping & Delivery</a></li>
+            <li><a href="#">Customer Service</a></li>
+          </ul>
+        </li>
+        <li>
+          <h2>About Us</h2>
+          <ul class="box">
+            <li><a href="#">Our Story</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Wholesale</a></li>
+            <li><a href="#">Affiliates</a></li>
+          </ul>
+        </li>
+        <li>
+          <h2>Our Policies</h2>
+          <ul class="box">
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Accessibility</a></li>
+            <li><a href="#">Supply Chain Transparency</a></li>
+          </ul>
+        </li>
+      </ul>
+      <div class="footer-bottom">
+        <div class="socials">
+          <a href="https://www.pinterest.com/envision5076111/"
+            ><i class="fab fa-pinterest"></i
+          ></a>
+          <a href="https://www.instagram.com/landofgaia/"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://www.facebook.com/LandofGaia/"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </div>
+        <p>&copy; 2021 Land of Gaia, LLC. All Rights Reserved.</p>
+      </div>
+    </footer>
+  </body>
 </html>
