--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,106 +1,244 @@
-html {
-  font-size: 62.5%;
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@500&display=swap");
+
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  background-color: #f6e8b1;
 }
 
 body {
   margin: 0;
-  height: 100vh;
-  font-size: 1.2rem/normal;
-  font-family: Karla, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-  height: 100%;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-areas: 'header' 'main' 'footer';
-  grid-template-columns: 1fr;
-  grid-template-rows: 5rem 1fr 5rem;
-  height: 100%;
-}
-
-header {
-  grid-area: header;
-  background-color: #d4caa3;
-}
-
-main {
-  grid-area: main;
-  padding: 1rem;
-}
-
-footer {
-  grid-area: footer;
-  background-color: #d4caa3;
-  color: #222;
-}
-
-h1 {
-  font-size: 1.4rem;
-  padding: 1rem 0;
-}
-
-h2 {
-  font-size: 1.2rem;
-  padding: 1rem 0;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.row.center {
-  justify-content: center;
-}
-
-img.medium {
-  max-width: 29rem;
-  width: 100%;
-}
-
-.card {
-  margin: 1rem;
-}
-
-.card-body {
-  padding: 1rem;
-}
-
-.card-body>* {
-  margin-bottom: 0.5rem;
-}
-
-.price {
-  font-size: 1.3rem;
+  font-family: "Karla", sans-serif;
+  font-size: 14px;
 }
 
 a {
   text-decoration: none;
-  color: #222
+  color: #26262c;
 }
 
-a:hover {
-  color: #ff8000;
-}
-
-header a {
-  padding: 1rem;
+header {
+  background-color: #fdfdf9;
+  text-align: center;
+  position: sticky;
+  top: 0;
+  height: 55px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-bottom: 1px solid #e5e2de;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
 }
 
 .logo {
-  border-radius: 50%;
-  width: 10%;
-  height: 10%;
-  margin: 0%;
-  padding: 0%;
-  border: none;
+  height: 18px;
+}
+
+.nav-toggle {
+  display: none;
+}
+
+.nav-toggle-label {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-toggle-label span,
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  display: block;
+  background: #26262c;
+  height: 1px;
+  width: 16px;
+  border-radius: 2px;
+  position: relative;
+}
+
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  content: "";
+  position: absolute;
+}
+
+.nav-toggle-label span::before {
+  bottom: 5px;
+}
+
+.nav-toggle-label span::after {
+  top: 5px;
+}
+
+nav {
+  position: absolute;
+  text-align: left;
+  top: 56px;
+  left: 0;
+  width: 100%;
+  background-color: #fdfdf9;
+  display: none;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav li {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 1em;
+}
+
+nav a {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+.nav-toggle:checked ~ nav {
+  display: block;
+}
+
+.search-cart {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 25px;
+}
+
+.fa-search {
+  font-size: 20px;
+}
+
+.fa-shopping-bag {
+  font-size: 20px;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  margin-bottom: 30px;
+  background-color: #fdfdf9;
+}
+
+.card {
+  position: relative;
+  display: inline-block;
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  margin-bottom: 30px;
+}
+
+.card-img {
+  margin-bottom: 10px;
+  width: 150px;
+  height: 225px;
+}
+
+.product-name {
+  display: block;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-bottom: 5px;
+  max-width: 150px;
+  word-wrap: break-word;
+}
+
+footer {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 50px;
+  color: #26262c;
+  background-color: #f7f6f2;
+}
+
+.footer > * {
+  flex: 1 100%;
+}
+
+.footer-left {
+  margin-right: 1.25rem;
+  margin-bottom: 2em;
+}
+
+.footer-left img {
+  width: 50%;
+}
+
+h2 {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.footer ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer li {
+  line-height: 2em;
+}
+
+.footer-right {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.footer-right > * {
+  flex: 1 50%;
+  margin-right: 1.25em;
+}
+
+.footer-bottom {
+  text-align: center;
+  padding-top: 50px;
+}
+
+.footer-left p {
+  padding-right: 20%;
+}
+
+.socials a {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.socials a i {
+  padding: 10px 6px;
+  font-size: 30px;
+}
+
+@media screen and (min-width: 600px) {
+  .nav-toggle-label {
+    display: none;
+  }
+  header {
+    display: flex;
+  }
+  .logo {
+  }
+  .footer-right > * {
+    flex: 1;
+  }
+  .footer-left {
+    flex: 1 0px;
+  }
+  .footer-right {
+    flex: 2 0px;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer {
+    padding: 15px;
+  }
 }
