--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Karla:wght@500&display=swap");
 
-*,
-*::before,
-*::after {
+* {
   box-sizing: border-box;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   font-family: "Karla", sans-serif;
   font-size: 14px;
 }
@@ -17,6 +15,7 @@ a {
   color: #26262c;
 }
 
+/* Header */
 header {
   background-color: #fdfdf9;
   text-align: center;
@@ -89,9 +88,7 @@ nav ul {
 }
 
 nav li {
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 1em;
+  margin: 1em 0 1em 1em;
 }
 
 nav a {
@@ -118,6 +115,7 @@ nav a {
   font-size: 20px;
 }
 
+/* Main */
 main {
   padding-top: 20px;
   background-color: #fdfdf9;
@@ -134,8 +132,6 @@ main {
 .card {
   position: relative;
   display: inline-block;
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
   margin-bottom: 30px;
 }
 
@@ -154,6 +150,7 @@ main {
   word-wrap: break-word;
 }
 
+/* Footer */
 footer {
   display: flex;
   flex-flow: row wrap;
@@ -168,7 +165,7 @@ footer {
 
 .footer-left {
   margin-right: 1.25rem;
-  margin-bottom: 2em;
+  margin-bottom: 2rem;
 }
 
 .footer-left img {
@@ -186,12 +183,13 @@ h2 {
 }
 
 .footer li {
-  line-height: 2em;
+  line-height: 1.8rem;
 }
 
 .footer-right {
   display: flex;
   flex-flow: row wrap;
+  text-align: left;
 }
 
 .footer-right > * {
@@ -221,9 +219,6 @@ h2 {
 @media screen and (min-width: 600px) {
   .nav-toggle-label {
     display: none;
-  }
-  header {
-    display: flex;
   }
   .footer-right > * {
     flex: 1;
